--- a/BlockedFrontend/templates/site/site.html
+++ b/BlockedFrontend/templates/site/site.html
@@ -9,6 +9,11 @@
 <a href="https://uk.451unavailable.org/{{network}}/{{url}}" title="Error 451 page for {{url|noproto}} on {{network}}" >{{network}}</a>
 {% endmacro %}
 
+{% block page_style %}
+.remote_ip {
+    color: #a0a0a0;
+}
+{% endblock %}
 
 {% if not thanks %}
 {%set titletag = "Site report: " + domain %}
@@ -103,7 +108,9 @@ Your feedback was successfully submitted.
 <table id="{{ id }}" class="table results-table">
 <tr>
   <th>ISP</th>
-  <th>Last Checked</th>
+  <th>Last Checked
+      {%- if g.admin and g.admin_level == 'admin' %} / Remote IP{% endif -%}
+  </th>
   {% if show_category %}
     <th>Category</th>
     <th></th>
@@ -120,7 +127,11 @@ Your feedback was successfully submitted.
   <td >
     {{ isp_info(item.network_name, networks) }}
   </td>
-  <td>{{item.status_timestamp|fmtime}}</td>
+  <td>{{item.status_timestamp|fmtime}}
+  {% if g.admin and g.admin_level == 'admin' %}
+  <div class="remote_ip">{{ item.remote_ip }}</div>
+  {% endif %}
+  </td>
   {% if show_category %}
     <td>{{item.category}}
     {% if item.blocktype == 'COPYRIGHT' %}
