--- a/BlockedFrontend/templates/site/site.html
+++ b/BlockedFrontend/templates/site/site.html
@@ -129,7 +129,7 @@ Your feedback was successfully submitted.
   </td>
   <td>{{item.status_timestamp|fmtime}}
   {% if g.admin and g.admin_level == 'admin' %}
-  <div class="remote_ip">{{ item.remote_ip }}</div>
+  <div class="remote_ip">{{ item.remote_ip|null }}</div>
   {% endif %}
   </td>
   {% if show_category %}
