--- a/BlockedFrontend/templates/site/site.html
+++ b/BlockedFrontend/templates/site/site.html
@@ -13,6 +13,10 @@
 .remote_ip {
     color: #a0a0a0;
 }
+#categorylist span {
+    font-weight: bold;
+}
+
 {% endblock %}
 
 {% if not thanks %}
@@ -311,6 +315,12 @@ Your feedback was successfully submitted.
 
     {% if savedlist and not live and config.MODULE_SAVEDLIST %}
     <div>This site appears on the <a href="{{ url_for('list.show_list', name=savedlist.name) }}">{{ savedlist.name }}</a> user-created list.</div>
+    {% endif %}
+
+    {% if categories %}
+    <div id="categorylist">This site is listed in the {{ categories|join_en(markup=True)|safe }} categor{{ 'y' if categories|length == 1 else 'ies' }}.</div>
+    
+    <p><small><em>Category information provided by <a href="https://categorify.org" target="_blank">Categorify</a> and <a href="https://dmoztools.net" target="_blank">dmoztools.net</a></em></small></p>
     {% endif %}
 
   </div>
