--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -98,7 +98,7 @@ $(document).ready(function(){
         <div class="row">
 
             <div class="col-md-9">
-                <h4><a name="msg{{loop.index}}"></a>{{ selected_msg.subject }}</h4>
+                <h4>{{ selected_msg.subject }}</h4>
                 <div>From: {{ selected_msg.from }}</div>
                 <div>Date: {{ selected_msg.date }}</div>
             </div>
