--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -135,7 +135,7 @@ $(document).ready(function(){
         </div>
     </div>
     <div class="panel-body">
-        <p class="message" id="msg{{loop.index}}" style="">{{ show_message(selected_msg) }}</p>
+        <p class="message" style="">{{ show_message(selected_msg) }}</p>
     </div>
 </div>
 
