--- a/BlockedFrontend/templates/admin/ispreports.html
+++ b/BlockedFrontend/templates/admin/ispreports.html
@@ -33,9 +33,9 @@
   <td>{{report.url|noproto}}</td>
   <td>  
     {% if report.unblocked %}
-    <span class="label label-success" title="URL is not blocked"><span class="glyphicon glyphicon-ok"></span> Unblocked</span>
+    <span class="text-success glyphicon glyphicon-ok" title="URL is not blocked"></span>
     {% else %}
-    <span class="label label-danger" title="URL is blocked"><span class="glyphicon glyphicon-error"></span> Unblocked</span>
+    <span class="text-danger glyphicon glyphicon-error" title="URL is blocked"></span>
     {% endif %}
   </td>
   <td>{{report.email}}</td>
