Fix status icon

--- a/BlockedFrontend/templates/admin/ispreports.html
+++ b/BlockedFrontend/templates/admin/ispreports.html
@@ -33,9 +33,9 @@
   <td>{{report.url|noproto}}</td>
   <td>  
     {% if report.unblocked %}
-    <span class="text-success glyphicon glyphicon-ok" title="URL is not blocked"></span>
+    <span class="text-success glyphicon glyphicon-ok-sign" title="URL is not blocked"></span>
     {% else %}
-    <span class="text-danger glyphicon glyphicon-error" title="URL is blocked"></span>
+    <span class="text-danger glyphicon glyphicon-remove-sign" title="URL is blocked"></span>
     {% endif %}
   </td>
   <td>{{report.email}}</td>
