Fix status icon

--- a/BlockedFrontend/templates/admin/ispreports.html
+++ b/BlockedFrontend/templates/admin/ispreports.html
@@ -20,11 +20,11 @@
 <table class="table table-condensed">
 <tr>
   <th>URL</th>
-  <th>URL Status</th>
+  <th>URL<br/>Status</th>
   <th>Email</th>
   <th>Network</th>
   <th>Created</th>
-  <th>Report Status</th>
+  <th>Report<br/>Status</th>
   <th>Replies</th>
   <th></th>
 </tr>
