--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -1,5 +1,6 @@
 {% extends "admin.page.html" %}
 {% import "paging.part.html" as paging %}
+{% import "forms.part.html" as forms %}
 
 {% set pagetitle = "ISP Report Admin: " + url + " on " + report.network_name %}
 
@@ -40,18 +41,31 @@ $(document).ready(function(){
 });
 {% endblock %}
 
+{% macro activetab(name, dfl='') %}
+{%- if name == request.args.tab|default(dfl) -%}active{%- endif -%}
+{% endmacro %}
+
 {% block body %}
 <h1>{{pagetitle}}</h1>
 
+<ul class="nav nav-tabs">
+  <li class="{{ activetab('report','report') }}"><a href="#report" role="tab" data-toggle="tab">Report</a></li>
+  <li class="{{ activetab('categories') }}"><a href="#categories" role="tab"  data-toggle="tab">Review Categories</a></li>
+  <li class="{{ activetab('block') }}"><a href="#block" role="tab" data-toggle="tab">Review Block</a></li>
+</ul>
 
+<div class="tab-content">
+<div id="report" class="tab-pane {{ activetab('report','report') }}">
 
 <div class="row">
 <div class="col-md-6">
 
-<div><strong>Reported:</strong> {{ report.created|fmtime }}</div>
-<div><strong>User:</strong> {{ report.name }} ({{report.email}})</div>
+{{ forms.static_field("Reported", 'reported', report.created|fmtime) }}
+{{ forms.static_field("Updated", 'reported', report.last_updated|fmtime) }}
+{{ forms.static_field("User", 'user', "%s (%s)"|format(report.name, report.email)) }}
 
-<p style="margin-top: 1em; font-size: larger; font-style: italic">&ldquo;{{report.message}}&rdquo;</p>
+
+<p style="margin-top: 1em; font-size: larger; font-style: italic" class="well">&ldquo;{{report.message}}&rdquo;</p>
 
 </div>
 <div class="col-md-6" style="text-align: right">
@@ -64,6 +78,63 @@ $(document).ready(function(){
 </h2>
 </div>
 </div> <!-- /.row -->
+
+</div> <!-- /#report -->
+
+<div id="categories" class="tab-pane {{ activetab('categories') }}">
+    <h4>Categories</h4>
+    <div class="row">
+        <div class="col-md-6">
+    <ul>
+        {% for cat in categories %}
+        <li>
+        {% if cat.enabled %}
+        {{ cat.display_name }} ({{ cat.namespace }})
+        <a href="{{ url_for('.ispreports_addremove_category', mode='disable', id=cat.url_category_id, report=report.id) }}" class=""><span class="glyphicon glyphicon-trash"></span></a>
+        {% else %}
+        <strike>{{ cat.display_name }} ({{cat.namespace}})</strike>
+        <a href="{{ url_for('.ispreports_addremove_category', mode='enable', id=cat.url_category_id, report=report.id) }}" class=""><span class="glyphicon glyphicon-repeat"></span></a>
+        {% endif %}
+        </li>
+        {% endfor %}
+    </ul>
+        </div>
+        <div class="col-md-6">
+        
+        <form method="POST" action="{{ url_for('.ispreports_update_category') }}">
+            <input type="hidden" name="report_id" value="{{ report.id }}" />
+            
+            <div class="form-group">
+                <label class="control-label" for="category_id">Add Category</label>
+                <select class="form-control" name="category_id">
+                    <option value="" selected>(None)</option>
+                    {% for group in all_categories|groupby('1') %}
+                    <optgroup label="{{ group.grouper }}">
+                    {% for cat in group.list %}                    
+                    <option value="{{cat.0}}" >{{ cat.2 }}</option>
+                    {% endfor %}
+                    </optgroup>
+                    {% endfor %}
+                </select>
+            </div>
+            
+        {{  forms.textarea_field('Category notes', 'category_notes', report.category_notes|default('') ) }}
+        
+        <input type="submit" value="Update" class="btn btn-primary" />
+        </form>
+        
+        
+        </div>
+    </div>
+</div> <!-- /#categories -->
+
+<div id="block" class="tab-pane {{ activetab('block') }}">
+</div> <!-- /#block -->
+
+</div> <!-- /.tab-content -->
+
+<hr />
+
 <div class="row">
 <div class="col-md-12">
 
